--- a/include/inlined-foot.html
+++ b/include/inlined-foot.html
@@ -1,7 +1,7 @@
     <!-- Load the rest of the CSS. Note that we do not need any JS hacks here: HTML allows <link> stylesheets in the body: https://html.spec.whatwg.org/multipage/links.html#body-ok https://jakearchibald.com/2016/link-in-body/ -->
-	<noscript><link rel="stylesheet" type="text/css" href="/static/css/fonts.css?v=1682197422"></noscript>
-	<noscript><link rel="stylesheet" type="text/css" href="/static/css/default.css?v=1682539995"></noscript>
-	<noscript><link rel="stylesheet" type="text/css" href="/static/css/links.css?v=1682237813"></noscript>
+	<link rel="stylesheet" type="text/css" href="/static/css/fonts.css?v=1682197422">
+	<link rel="stylesheet" type="text/css" href="/static/css/default.css?v=1682539995">
+	<link rel="stylesheet" type="text/css" href="/static/css/links.css?v=1682237813">
 
     <!-- JS library with utility functions used in rest of code -->
     <script src="/static/js/utility.js?v=1682062681" defer></script>
@@ -11,7 +11,7 @@
     <script src="/static/js/popups.js?v=1682105444" defer></script>
     <script src="/static/js/popins.js?v=1680923440" defer></script>
     <!-- JS library for annotating hyperlinks with introduction/summary from various sources; not lazy-loaded as (almost) all pages have popups -->
-    <script src="/static/js/annotations.js?v=1682062718" defer></script>
+    <script src="/static/js/annotations.js?v=1682545657" defer></script>
     <script src="/static/js/content.js?v=1681949955" defer></script>
     <script src="/static/js/extracts.js?v=1682372623" defer></script>
     <script src="/static/js/extracts-annotations.js?v=1681929143" defer></script>
@@ -24,7 +24,7 @@
     <!-- JS library for Tufte-style 'sidenotes' (footnotes popped into the left & right margins on sufficiently-wide screens); much more convenient than floating footnotes & endnotes -->
     <script src="/static/js/sidenotes.js?v=1682292506" defer></script>
     <!-- JS library for client-side transclusion -->
-    <script src="/static/js/transclude.js?v=1682469590" defer></script>
+    <script src="/static/js/transclude.js?v=1682545587" defer></script>
     <!-- JS library for collapsed sections -->
     <script src="/static/js/collapse.js?v=1682444532" defer></script>
     <!-- Dark Mode theme switcher (lets users toggle between regular black-on-white CSS, and dark mode) -->
