--- a/css/default.css
+++ b/css/default.css
@@ -6269,6 +6269,64 @@ ol.link-bibliography-list-compact > li::before {
     }
 }
 
+
+/**************************/
+/* MOBILE FLOATING HEADER */
+/**************************/
+
+#floating-header {
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	background-color: var(--GW-body-background-color);
+	box-sizing: border-box;
+    box-shadow: 0 2px 6px #ccc;
+	padding: 0 8px;
+}
+#floating-header.hidden {
+    top: -100%;
+}
+
+#floating-header p {
+	text-indent: 0;
+	text-align: center;
+}
+
+#floating-header .page-title {
+	font-variant-caps: small-caps;
+    font-weight: 600;
+    width: fit-content;
+    margin: 3px auto 4px auto;
+}
+#floating-header .section-title {
+    max-height: 0;
+    margin: 0;
+    overflow: hidden;
+}
+
+#floating-header.show-section .page-title {
+    padding-bottom: 3px;
+    border-bottom: 1px dotted #aaa;
+}
+#floating-header.show-section .section-title {
+    font-size: calc(1em * 8/9);
+	font-weight: bold;
+	margin-bottom: 7px;
+    max-height: unset;
+}
+
+#floating-header .scroll-indicator {
+    height: 2px;
+    margin: 0 -8px;
+	background-image: linear-gradient(#999,
+									  #999);
+	background-position: 0 0;
+	background-repeat: no-repeat;
+	background-size: 0 0;
+}
+
+
 /*************/
 /* DARK MODE */
 /*************/
