--- a/css/default.css
+++ b/css/default.css
@@ -6281,11 +6281,13 @@ ol.link-bibliography-list-compact > li::before {
 	width: 100%;
 	background-color: var(--GW-body-background-color);
 	box-sizing: border-box;
-    box-shadow: 0 2px 6px #ccc;
+    box-shadow: 0 2px 6px var(--GW-floating-header-box-shadow-color);
 	padding: 0 8px;
+    transition:
+        top 0.2s ease-out;
 }
 #floating-header.hidden {
-    top: -100%;
+    top: -2.5em;
 }
 
 #floating-header p {
@@ -6298,29 +6300,35 @@ ol.link-bibliography-list-compact > li::before {
     font-weight: 600;
     width: fit-content;
     margin: 3px auto 4px auto;
+    transition:
+        padding 0.2s ease-out,
+        border 0.2s ease-out;
 }
 #floating-header .section-title {
+    font-size: calc(1em * 8/9);
+	font-weight: bold;
     max-height: 0;
     margin: 0;
     overflow: hidden;
+    transition:
+        margin 0.2s ease-out,
+        max-height 0.2s ease-out;
 }
 
 #floating-header.show-section .page-title {
     padding-bottom: 3px;
-    border-bottom: 1px dotted #aaa;
+    border-bottom: 1px dotted var(--GW-floating-header-separator-color);
 }
 #floating-header.show-section .section-title {
-    font-size: calc(1em * 8/9);
-	font-weight: bold;
 	margin-bottom: 7px;
-    max-height: unset;
+    max-height: 4em;
 }
 
 #floating-header .scroll-indicator {
     height: 2px;
     margin: 0 -8px;
-	background-image: linear-gradient(#999,
-									  #999);
+	background-image: linear-gradient(var(--GW-floating-header-scroll-indicator-color),
+									  var(--GW-floating-header-scroll-indicator-color));
 	background-position: 0 0;
 	background-repeat: no-repeat;
 	background-size: 0 0;
