--- a/css/include/components/colors-dark-GENERATED.css
+++ b/css/include/components/colors-dark-GENERATED.css
@@ -285,6 +285,12 @@
 	--GW-back-to-top-link-color: #5c5c5c;
 	--GW-back-to-top-link-hover-color: #8b8b8b;
 
+	/*	Mobile floating header.
+	 */
+	--GW-floating-header-box-shadow-color: #5c5c5c;
+	--GW-floating-header-separator-color: #7c7c7c;
+	--GW-floating-header-scroll-indicator-color: #8b8b8b;
+
 	/*	“Skip to content” accessibility link.
 	 */
 	--GW-skip-to-content-text-color: #000;
