--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -286,6 +286,12 @@
 	--GW-back-to-top-link-color: #ccc;
 	--GW-back-to-top-link-hover-color: #999;
 
+	/*	Mobile floating header.
+	 */
+	--GW-floating-header-box-shadow-color: #ccc;
+	--GW-floating-header-separator-color: #aaa;
+	--GW-floating-header-scroll-indicator-color: #999;
+
 	/*	“Skip to content” accessibility link.
 	 */
 	--GW-skip-to-content-text-color: #fff;
@@ -2083,6 +2089,12 @@ body.special-halloween-dark h6 {
 	 */
 	--GW-back-to-top-link-color: #5c5c5c;
 	--GW-back-to-top-link-hover-color: #8b8b8b;
+
+	/*	Mobile floating header.
+	 */
+	--GW-floating-header-box-shadow-color: #5c5c5c;
+	--GW-floating-header-separator-color: #7c7c7c;
+	--GW-floating-header-scroll-indicator-color: #8b8b8b;
 
 	/*	“Skip to content” accessibility link.
 	 */
@@ -3910,9 +3922,7 @@ ReaderMode.injectStyleBlock(ReaderMode.styles, "reader-mode-styles");
 //  Activate saved mode, once the <body> element is loaded (and classes known).
 doWhenBodyExists(ReaderMode.setMode);
 </script>
-
-
 <link rel="preload" href="/static/css/fonts.css?v=1682197422" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
-<link rel="preload" href="/static/css/default.css?v=1682571649" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
+<link rel="preload" href="/static/css/default.css?v=1682580947" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
 <link rel="preload" href="/static/css/links.css?v=1682237813" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
 <link rel="preload" href="/static/img/icon/icons.svg" as="image">
