--- a/include/inlined-foot.html
+++ b/include/inlined-foot.html
@@ -1,7 +1,7 @@
     <!-- Load the rest of the CSS. Note that we do not need any JS hacks here: HTML allows <link> stylesheets in the body: https://html.spec.whatwg.org/multipage/links.html#body-ok https://jakearchibald.com/2016/link-in-body/ -->
-	<link rel="stylesheet" type="text/css" href="/static/css/fonts.css?v=1682197422">
-	<link rel="stylesheet" type="text/css" href="/static/css/default.css?v=1682740698">
-	<link rel="stylesheet" type="text/css" href="/static/css/links.css?v=1682237813">
+	<noscript><link rel="stylesheet" type="text/css" href="/static/css/fonts.css?v=1682197422"></noscript>
+	<noscript><link rel="stylesheet" type="text/css" href="/static/css/default.css?v=1682778857"></noscript>
+	<noscript><link rel="stylesheet" type="text/css" href="/static/css/links.css?v=1682237813"></noscript>
 
     <!-- JS library with utility functions used in rest of code -->
     <script src="/static/js/utility.js?v=1682062681" defer></script>
@@ -15,7 +15,7 @@
     <script src="/static/js/content.js?v=1682743160" defer></script>
     <script src="/static/js/extracts.js?v=1682739387" defer></script>
     <script src="/static/js/extracts-annotations.js?v=1682739416" defer></script>
-    <script src="/static/js/extracts-content.js?v=1682739403" defer></script>
+    <script src="/static/js/extracts-content.js?v=1682744531" defer></script>
     <script src="/static/js/extracts-options.js?v=1669582509" defer></script>
 	<!-- JS library for in-browser hyphenation -->
 	<script src="/static/js/Hyphenopoly_Loader.js?v=1650818540" defer></script>
