--- a/include/inlined-foot.html
+++ b/include/inlined-foot.html
@@ -1,7 +1,7 @@
     <!-- Load the rest of the CSS. Note that we do not need any JS hacks here: HTML allows <link> stylesheets in the body: https://html.spec.whatwg.org/multipage/links.html#body-ok https://jakearchibald.com/2016/link-in-body/ -->
-	<noscript><link rel="stylesheet" type="text/css" href="/static/css/fonts.css?v=1682197422"></noscript>
-	<noscript><link rel="stylesheet" type="text/css" href="/static/css/default.css?v=1682781664"></noscript>
-	<noscript><link rel="stylesheet" type="text/css" href="/static/css/links.css?v=1682237813"></noscript>
+	<link rel="stylesheet" type="text/css" href="/static/css/fonts.css?v=1682197422">
+	<link rel="stylesheet" type="text/css" href="/static/css/default.css?v=1682781664">
+	<link rel="stylesheet" type="text/css" href="/static/css/links.css?v=1682237813">
 
     <!-- JS library with utility functions used in rest of code -->
     <script src="/static/js/utility.js?v=1682062681" defer></script>
@@ -12,7 +12,7 @@
     <script src="/static/js/popins.js?v=1680923440" defer></script>
     <!-- JS library for annotating hyperlinks with introduction/summary from various sources; not lazy-loaded as (almost) all pages have popups -->
     <script src="/static/js/annotations.js?v=1682721790" defer></script>
-    <script src="/static/js/content.js?v=1682781266" defer></script>
+    <script src="/static/js/content.js?v=1682783983" defer></script>
     <script src="/static/js/extracts.js?v=1682739387" defer></script>
     <script src="/static/js/extracts-annotations.js?v=1682739416" defer></script>
     <script src="/static/js/extracts-content.js?v=1682781719" defer></script>
