--- a/include/inlined-foot.html
+++ b/include/inlined-foot.html
@@ -1,12 +1,12 @@
     <!-- Load the rest of the CSS. Note that we do not need any JS hacks here: HTML allows <link> stylesheets in the body: https://html.spec.whatwg.org/multipage/links.html#body-ok https://jakearchibald.com/2016/link-in-body/ -->
-	<link rel="stylesheet" type="text/css" href="/static/css/fonts.css?v=1682197422">
+	<link rel="stylesheet" type="text/css" href="/static/css/fonts.css?v=1682881267">
 	<link rel="stylesheet" type="text/css" href="/static/css/default.css?v=1682869262">
 	<link rel="stylesheet" type="text/css" href="/static/css/links.css?v=1682784367">
 
     <!-- JS library with utility functions used in rest of code -->
     <script src="/static/js/utility.js?v=1682062681" defer></script>
-    <!-- JS library for typography rectification -->
-    <script src="/static/js/typography.js?v=1680851954" defer></script>
+    <!-- Misc JS -->
+    <script src="/static/js/misc.js?v=1682881007" defer></script>
     <!-- JS library for spawning popups -->
     <script src="/static/js/popups.js?v=1682875599" defer></script>
     <script src="/static/js/popins.js?v=1682875578" defer></script>
@@ -19,8 +19,10 @@
     <script src="/static/js/extracts-options.js?v=1669582509" defer></script>
 	<!-- JS library for in-browser hyphenation -->
 	<script src="/static/js/Hyphenopoly_Loader.js?v=1650818540" defer></script>
-    <!-- Misc JS -->
-    <script src="/static/js/rewrite.js?v=1682875549" defer></script>
+    <!-- JS library for typography rectification -->
+    <script src="/static/js/typography.js?v=1680851954" defer></script>
+    <!-- Various rewrites and other page modifications -->
+    <script src="/static/js/rewrite.js?v=1682881379" defer></script>
     <!-- JS library for Tufte-style 'sidenotes' (footnotes popped into the left & right margins on sufficiently-wide screens); much more convenient than floating footnotes & endnotes -->
     <script src="/static/js/sidenotes.js?v=1682292506" defer></script>
     <!-- JS library for client-side transclusion -->
@@ -33,3 +35,5 @@
     <script src="/static/js/reader-mode.js?v=1681775523" defer></script>
     <!-- JS library for clickable/zoomable images, for images larger than can be displayed in the body: /static/js/image-focus.js -->
     <script src="/static/js/image-focus.js?v=1682443488" defer></script>
+    <!-- Command console -->
+    <script src="/static/js/console.js?v=1682880949" defer></script>
