--- a/template/inlined-foot-template.html
+++ b/template/inlined-foot-template.html
@@ -5,8 +5,8 @@
 
     <!-- JS library with utility functions used in rest of code -->
     <script src="/static/js/utility.js" defer></script>
-    <!-- JS library for typography rectification -->
-    <script src="/static/js/typography.js" defer></script>
+    <!-- Misc JS -->
+    <script src="/static/js/misc.js" defer></script>
     <!-- JS library for spawning popups -->
     <script src="/static/js/popups.js" defer></script>
     <script src="/static/js/popins.js" defer></script>
@@ -19,7 +19,9 @@
     <script src="/static/js/extracts-options.js" defer></script>
 	<!-- JS library for in-browser hyphenation -->
 	<script src="/static/js/Hyphenopoly_Loader.js" defer></script>
-    <!-- Misc JS -->
+    <!-- JS library for typography rectification -->
+    <script src="/static/js/typography.js" defer></script>
+    <!-- Various rewrites and other page modifications -->
     <script src="/static/js/rewrite.js" defer></script>
     <!-- JS library for Tufte-style 'sidenotes' (footnotes popped into the left & right margins on sufficiently-wide screens); much more convenient than floating footnotes & endnotes -->
     <script src="/static/js/sidenotes.js" defer></script>
@@ -33,3 +35,5 @@
     <script src="/static/js/reader-mode.js" defer></script>
     <!-- JS library for clickable/zoomable images, for images larger than can be displayed in the body: /static/js/image-focus.js -->
     <script src="/static/js/image-focus.js" defer></script>
+    <!-- Command console -->
+    <script src="/static/js/console.js" defer></script>
