--- a/include/inlined-foot.html
+++ b/include/inlined-foot.html
@@ -1,39 +1,39 @@
     <!-- Load the rest of the CSS. Note that we do not need any JS hacks here: HTML allows <link> stylesheets in the body: https://html.spec.whatwg.org/multipage/links.html#body-ok https://jakearchibald.com/2016/link-in-body/ -->
-	<link rel="stylesheet" type="text/css" href="/static/css/fonts.css?v=1682881267">
-	<link rel="stylesheet" type="text/css" href="/static/css/default.css?v=1682869262">
-	<link rel="stylesheet" type="text/css" href="/static/css/links.css?v=1682784367">
+	<noscript><link rel="stylesheet" type="text/css" href="/static/css/fonts.css?v=1682217271"></noscript>
+	<noscript><link rel="stylesheet" type="text/css" href="/static/css/default.css?v=1682967874"></noscript>
+	<noscript><link rel="stylesheet" type="text/css" href="/static/css/links.css?v=1682780256"></noscript>
 
     <!-- JS library with utility functions used in rest of code -->
-    <script src="/static/js/utility.js?v=1682967442" defer></script>
+    <script src="/static/js/utility.js?v=1682967605" defer></script>
     <!-- Misc JS -->
-    <script src="/static/js/misc.js?v=1682966420" defer></script>
+    <script src="/static/js/misc.js?v=1682967605" defer></script>
     <!-- JS library for spawning popups -->
-    <script src="/static/js/popups.js?v=1682875599" defer></script>
-    <script src="/static/js/popins.js?v=1682875578" defer></script>
+    <script src="/static/js/popups.js?v=1682878873" defer></script>
+    <script src="/static/js/popins.js?v=1682878873" defer></script>
     <!-- JS library for annotating hyperlinks with introduction/summary from various sources; not lazy-loaded as (almost) all pages have popups -->
-    <script src="/static/js/annotations.js?v=1682963539" defer></script>
-    <script src="/static/js/content.js?v=1682783983" defer></script>
-    <script src="/static/js/extracts.js?v=1682966453" defer></script>
-    <script src="/static/js/extracts-annotations.js?v=1682739416" defer></script>
-    <script src="/static/js/extracts-content.js?v=1682781719" defer></script>
-    <script src="/static/js/extracts-options.js?v=1669582509" defer></script>
+    <script src="/static/js/annotations.js?v=1682967345" defer></script>
+    <script src="/static/js/content.js?v=1682797844" defer></script>
+    <script src="/static/js/extracts.js?v=1682967605" defer></script>
+    <script src="/static/js/extracts-annotations.js?v=1682754804" defer></script>
+    <script src="/static/js/extracts-content.js?v=1682797844" defer></script>
+    <script src="/static/js/extracts-options.js?v=1669597260" defer></script>
 	<!-- JS library for in-browser hyphenation -->
-	<script src="/static/js/Hyphenopoly_Loader.js?v=1650818540" defer></script>
+	<script src="/static/js/Hyphenopoly_Loader.js?v=1650821831" defer></script>
     <!-- JS library for typography rectification -->
-    <script src="/static/js/typography.js?v=1680851954" defer></script>
+    <script src="/static/js/typography.js?v=1680872822" defer></script>
     <!-- Various rewrites and other page modifications -->
-    <script src="/static/js/rewrite.js?v=1682881379" defer></script>
+    <script src="/static/js/rewrite.js?v=1682886567" defer></script>
     <!-- JS library for Tufte-style 'sidenotes' (footnotes popped into the left & right margins on sufficiently-wide screens); much more convenient than floating footnotes & endnotes -->
-    <script src="/static/js/sidenotes.js?v=1682292506" defer></script>
+    <script src="/static/js/sidenotes.js?v=1682292991" defer></script>
     <!-- JS library for client-side transclusion -->
-    <script src="/static/js/transclude.js?v=1682966209" defer></script>
+    <script src="/static/js/transclude.js?v=1682967605" defer></script>
     <!-- JS library for collapsed sections -->
-    <script src="/static/js/collapse.js?v=1682874448" defer></script>
+    <script src="/static/js/collapse.js?v=1682878873" defer></script>
     <!-- Dark Mode theme switcher (lets users toggle between regular black-on-white CSS, and dark mode) -->
-    <script src="/static/js/dark-mode.js?v=1681775495" defer></script>
+    <script src="/static/js/dark-mode.js?v=1681801234" defer></script>
     <!-- Reader Mode theme switcher (lets users toggle distraction-free ‘reader mode’ on and off) -->
-    <script src="/static/js/reader-mode.js?v=1681775523" defer></script>
+    <script src="/static/js/reader-mode.js?v=1681801234" defer></script>
     <!-- JS library for clickable/zoomable images, for images larger than can be displayed in the body: /static/js/image-focus.js -->
-    <script src="/static/js/image-focus.js?v=1682443488" defer></script>
+    <script src="/static/js/image-focus.js?v=1682451957" defer></script>
     <!-- Command console -->
-    <script src="/static/js/console.js?v=1682880949" defer></script>
+    <script src="/static/js/console.js?v=1682886567" defer></script>
