--- a/include/inlined-foot.html
+++ b/include/inlined-foot.html
@@ -1,7 +1,7 @@
     <!-- Load the rest of the CSS. Note that we do not need any JS hacks here: HTML allows <link> stylesheets in the body: https://html.spec.whatwg.org/multipage/links.html#body-ok https://jakearchibald.com/2016/link-in-body/ -->
-	<noscript><link rel="stylesheet" type="text/css" href="/static/css/fonts.css?v=1682881267"></noscript>
-	<noscript><link rel="stylesheet" type="text/css" href="/static/css/default.css?v=1683083572"></noscript>
-	<noscript><link rel="stylesheet" type="text/css" href="/static/css/links.css?v=1682784367"></noscript>
+	<link rel="stylesheet" type="text/css" href="/static/css/fonts.css?v=1682881267">
+	<link rel="stylesheet" type="text/css" href="/static/css/default.css?v=1683083572">
+	<link rel="stylesheet" type="text/css" href="/static/css/links.css?v=1682784367">
 
     <!-- JS library with utility functions used in rest of code -->
     <script src="/static/js/utility.js?v=1682967442" defer></script>
@@ -22,7 +22,7 @@
     <!-- JS library for typography rectification -->
     <script src="/static/js/typography.js?v=1680851954" defer></script>
     <!-- Various rewrites and other page modifications -->
-    <script src="/static/js/rewrite.js?v=1683072926" defer></script>
+    <script src="/static/js/rewrite.js?v=1683086606" defer></script>
     <!-- JS library for Tufte-style 'sidenotes' (footnotes popped into the left & right margins on sufficiently-wide screens); much more convenient than floating footnotes & endnotes -->
     <script src="/static/js/sidenotes.js?v=1682292506" defer></script>
     <!-- JS library for client-side transclusion -->
