--- a/include/inlined-foot.html
+++ b/include/inlined-foot.html
@@ -1,7 +1,7 @@
     <!-- Load the rest of the CSS. Note that we do not need any JS hacks here: HTML allows <link> stylesheets in the body: https://html.spec.whatwg.org/multipage/links.html#body-ok https://jakearchibald.com/2016/link-in-body/ -->
-	<link rel="stylesheet" type="text/css" href="/static/css/fonts.css?v=1682881267">
-	<link rel="stylesheet" type="text/css" href="/static/css/default.css?v=1683098608">
-	<link rel="stylesheet" type="text/css" href="/static/css/links.css?v=1682784367">
+	<noscript><link rel="stylesheet" type="text/css" href="/static/css/fonts.css?v=1682881267"></noscript>
+	<noscript><link rel="stylesheet" type="text/css" href="/static/css/default.css?v=1683143769"></noscript>
+	<noscript><link rel="stylesheet" type="text/css" href="/static/css/links.css?v=1682784367"></noscript>
 
     <!-- JS library with utility functions used in rest of code -->
     <script src="/static/js/utility.js?v=1682967442" defer></script>
@@ -9,13 +9,13 @@
     <script src="/static/js/misc.js?v=1682966420" defer></script>
     <!-- JS library for spawning popups -->
     <script src="/static/js/popups.js?v=1682875599" defer></script>
-    <script src="/static/js/popins.js?v=1683083290" defer></script>
+    <script src="/static/js/popins.js?v=1683144189" defer></script>
     <!-- JS library for annotating hyperlinks with introduction/summary from various sources; not lazy-loaded as (almost) all pages have popups -->
     <script src="/static/js/annotations.js?v=1682963539" defer></script>
     <script src="/static/js/content.js?v=1682783983" defer></script>
     <script src="/static/js/extracts.js?v=1682966453" defer></script>
     <script src="/static/js/extracts-annotations.js?v=1682739416" defer></script>
-    <script src="/static/js/extracts-content.js?v=1683139097" defer></script>
+    <script src="/static/js/extracts-content.js?v=1683139264" defer></script>
     <script src="/static/js/extracts-options.js?v=1669582509" defer></script>
 	<!-- JS library for in-browser hyphenation -->
 	<script src="/static/js/Hyphenopoly_Loader.js?v=1650818540" defer></script>
