Make popins code slightly more efficient

--- a/include/inlined-foot.html
+++ b/include/inlined-foot.html
@@ -1,7 +1,7 @@
     <!-- Load the rest of the CSS. Note that we do not need any JS hacks here: HTML allows <link> stylesheets in the body: https://html.spec.whatwg.org/multipage/links.html#body-ok https://jakearchibald.com/2016/link-in-body/ -->
-	<noscript><link rel="stylesheet" type="text/css" href="/static/css/fonts.css?v=1682881267"></noscript>
-	<noscript><link rel="stylesheet" type="text/css" href="/static/css/default.css?v=1683212850"></noscript>
-	<noscript><link rel="stylesheet" type="text/css" href="/static/css/links.css?v=1682784367"></noscript>
+	<link rel="stylesheet" type="text/css" href="/static/css/fonts.css?v=1682881267">
+	<link rel="stylesheet" type="text/css" href="/static/css/default.css?v=1683212850">
+	<link rel="stylesheet" type="text/css" href="/static/css/links.css?v=1682784367">
 
     <!-- JS library with utility functions used in rest of code -->
     <script src="/static/js/utility.js?v=1682967442" defer></script>
@@ -9,7 +9,7 @@
     <script src="/static/js/misc.js?v=1682966420" defer></script>
     <!-- JS library for spawning popups -->
     <script src="/static/js/popups.js?v=1682875599" defer></script>
-    <script src="/static/js/popins.js?v=1683171408" defer></script>
+    <script src="/static/js/popins.js?v=1683213331" defer></script>
     <!-- JS library for annotating hyperlinks with introduction/summary from various sources; not lazy-loaded as (almost) all pages have popups -->
     <script src="/static/js/annotations.js?v=1682963539" defer></script>
     <script src="/static/js/content.js?v=1682783983" defer></script>
